<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">ТракДок клиент</string>
    <string name="file_viewer_open_with">Открыть в другом приложении</string>
    <string name="file_viewer_share">Поделиться</string>
    <string name="file_viewer_reset_zoom">Сбросить масштаб</string>
    <string name="file_viewer_page">%1$d / %2$d</string>
    <string name="check_messages">Проверить сообщения</string>
    <string name="upload">Отправить файлы</string>
    <string name="print">Печатать</string>
    <string name="scan">Сканировать</string>
    <string name="sms">СМС</string>
    <string name="maps">Карта</string>
    <string name="register">Зарегистрировать</string>
    <string name="you_need_to_register">Это устройство не зарегистрировано на сервере.</string>
    <string name="you_was_deactivated">Ваш аккаунт теперь недействителен.</string>
    <string name="registration_code">Код регистрации</string>
    <string name="registration_failed">Проблема с регистрацией на сервере:</string>
    <string name="questionmark">\?!</string>
    <string name="explenation">Не найдена камера</string>
    <string name="nosdcard">Не найдена SD карта</string>
    <string name="no_network">Мобильная связь отсутствует. Проверьте наличие сим-карты и убедитесь, что вы в зоне действия мобильных операторов.</string>
    <string name="no_internet">: Данная сеть не поддерживает интернет соединение, либо отключена передача данных. Зарегистрироваться в сети другого оператора?</string>
    <string name="no_internet_sms">Данная сеть не поддерживает интернет соединение, либо отключена передача данных. Послать смс с таким же текстом?</string>
    <string name="question_answer_y">Да</string>
    <string name="question_answer_n">Нет</string>
    <string name="autoloader">Автозагрузка сообщений</string>
    <string name="autoloader_service_on">Служба включена</string>
    <string name="autoloader_mess">Автопроверка новых сообщений</string>
    <string name="server_connection_error">Соединение с сервером нарушено. Произошла ошибка</string>
    <string name="loading">Загрузка…</string>
    <string name="refresh">Обновить</string>
    <string name="incoming">Входящие</string>
    <string name="write_new">Написать</string>
    <string name="outgoing">Исходящие</string>
    <string name="wait_for_loading">Подождите, идет проверка новых сообщений от оператора…</string>
    <string name="open_attach_choice">Получены два типа документов. Открыть PDF-документы или изображения?</string>
    <string name="open_attach_image">Прикреплены изображения. Открыть изображения или ответить отправителю?</string>
    <string name="open_attach_doc">Прикреплены документы. Открыть документ или ответить отправителю?</string>
    <string name="document">Документ</string>
    <string name="image">Фото</string>
    <string name="cannot_open_file">Невозможно открыть файл. Он может быть поврежден, удален или его формат не поддерживается.</string>
    <string name="enter_msg">Нужно ввести сообщение</string>
    <string name="loading_stopped">Загрузка остановлена</string>
    <string name="send">Отправка</string>
    <string name="retake">Переснять</string>
    <string name="save">Сохранить</string>
    <string name="select_doc_type">Выбрать тип</string>
    <string name="new_message">Новое сообщение</string>
    <string name="send_leader">Отправить колонному</string>
    <string name="send_mechanic">Отправить механику</string>
    <string name="send_expeditor">Отправить экспедитору</string>
    <string name="clear_photos">Очистить все имеющиеся для отправки фото?</string>
    <string name="photo_btn">Фото</string>
    <string name="sms_btn">Смс</string>
    <string name="epi_btn">ЭПИ / T1</string>
    <string name="to_btn">Прием авто</string>
    <string name="scanner_btn">Фото документов</string>
    <string name="mech_photo_btn">Фото механику</string>
    <string name="chat_btn">Сообщения</string>
    <string name="type_cmr">СМR-накладная</string>
    <string name="type_invoice">Инвойс</string>
    <string name="type_list">Упаковочный лист</string>
    <string name="type_tir">Книжка МДП</string>
    <string name="type_comdesc">Коммерческое описание</string>
    <string name="type_ddc">ДКД</string>
    <string name="type_other">Прочее</string>
    <string name="type_export">Экспортная декларация</string>
    <string name="send_mess_failure">Сбой при отправке сообщения</string>
    <string name="messages_sent">Сообщения отправлены</string>
    <string name="message_sent">Сообщение отправлено</string>
    <string name="status_sent">Статус: Отправлено</string>
    <string name="status_wait">Статус: Ожидает</string>
    <string name="connection_failure">Соединение с сервером нарушено. Проверьте подключение к интернету</string>
    <string name="check_new_mess">Проверка новых сообщений…</string>
    <string name="load_new_mess">Загрузка новых сообщений…</string>
    <string name="get_1_mess">Получено 1 новое сообщение</string>
    <string name="get_mess_err">В процессе загрузки возникла ошибка. Остались незагруженные сообщения</string>
    <string name="get_n_mess">Получено:  </string>
    <string name="get_n_mess_2">  новых сообщениий.</string>
    <string name="no_new_mess">Новых сообщений нет.</string>
    <string name="no_new_mess_got">Нет новых сообщений.</string>
    <string name="error_no_mess">Произошла ошибка при загрузке.</string>
    <string name="send_all_scans_dlg">Отправить все имеющиеся сканированные документы?</string>
    <string name="log_sent">Логи успешно загружены на сервер</string>
    <string name="update_client_info">Информация о клиенте успешно загружена на сервер</string>
    <string name="update_client_info_error">Ошибка: Информация о клиенте не загружена на сервер</string>
    <string name="mess_sync">Синхронизация сообщений</string>
    <string name="mess_sync_finished">Синхронизация завершена</string>
    <string name="new_mess_status">Статус новых сообщений</string>
    <string name="new_mess_got">Получены новые сообщения от оператора</string>
    <string name="click_for_view">Нажмите для просмотра</string>
    <string name="new_mess_got_err">Получены новые сообщения от оператора. (Еще часть сообщений не загрузилось)</string>
    <string name="no_docs_for_send">Не найдено новых документов для отправки</string>
    <string name="load_for_leader">Загружается для колонного </string>
    <string name="file_of"> файл из </string>
    <string name="load_for_mech">Загружается для механика </string>
    <string name="load_for_epi">Загружается для оператора EPI </string>
    <string name="success_loading">Загрузка всех файлов успешно завершена</string>
    <string name="error_loading">Произошел сбой при загрузке </string>
    <string name="of_file"> файла</string>
    <string name="menu_inbox_refresh">Обновить</string>
    <string name="menu_inbox_delete_all">Удалить все сообщения</string>
    <string name="menu_inbox_autoload_options">Опции автоcинхронизации</string>
    <string name="send_error">Произошел сбой при отправке файлов на сервер</string>
    <string name="new_doc_send">Новые документы успешно отправлены</string>
    <string name="title_activity_camera_wizard">Описание страхового случая</string>
    <string name="to_leader">Колонному</string>
    <string name="from_leader">От колонного</string>
    <string name="from_expeditor">От экспедитора</string>
    <string name="to_expeditor">Экспедитору</string>
    <string name="to_mechanic">Механику</string>
    <string name="from_mechanic">От механика</string>
    <string name="connection_lost">Обрыв связи</string>
    <string name="connection_lost_desc">Пропало соединение с интернетом!</string>
    <string name="enter_registration_token">Нужно ввести код регистрации</string>
    <string name="messages">Сообщения</string>
    <string name="text_notes">Уточнения</string>
    <string name="text_notes_hint">(ввод текста)</string>
    <string name="btn_photo_mechanic">Фото механику</string>
    <string name="btn_photo_column">Фото колонному</string>
    <string name="btn_photo_concat">Перецепки</string>
    <string name="activity_photo_title">Фото</string>
    <string name="btn_photo_accident">Страховой случай</string>
    <string name="btn_photo_epi">ЭПИ / T1</string>
    <string name="menu_settings">Настройки меню</string>
    <string name="dialog_new_messages_view">Просмотреть…</string>
    <string name="dialog_new_messages_accept">Принято</string>
    <string name="dialog_new_messages_cant_answer">За рулем. Не могу ответить</string>
    <string name="prefs_column_title">Телефон колонного</string>
    <string name="prefs_mechanic_title">Телефон механика</string>
    <string name="prefs_expediterPhone_title">Телефон экспедитора</string>
    <string name="prefs_techSupportPhone_title">Телефон техподдержки</string>
    <string name="preferences_title">Настройки</string>
    <string name="menu_inbox_show_hidden">Показать скрытые</string>
    <string name="hidden">Скрыто</string>
    <string name="menu_inbox_export">Экспорт сообщений в файл</string>
    <string name="file_exported">Файл сохранён</string>
    <string name="csv_target">Кому</string>
    <string name="csv_text">Текст</string>
    <string name="csv_inout">Входящее/исходящее</string>
    <string name="csv_hidden">Скрытое</string>
    <string name="csv_sent">Отправленое</string>
    <string name="csv_date">Дата</string>
    <string name="csv_out">Исходящее</string>
    <string name="csv_in">Входящее</string>
    <string name="csv_is_hidden">Скрытое</string>
    <string name="csv_is_sent">Отправлено</string>
    <string name="csv_is_not_hidden" />
    <string name="csv_is_not_sent" />
    <string name="cant_delete_accidents_dir">Не могу удалить директорию</string>
    <string name="no_location_providers_found">Включите GPS</string>
    <string name="acc_common_scene">Фотографируйте общий план происшествия</string>
    <string name="acc_truck_number">Фотографируйте гос. номер тягача</string>
    <string name="acc_if_truck_damaged">Есть ли повреждения у грузовика?</string>
    <string name="acc_photo_truck_damages">Фиксируйте повреждения грузовика</string>
    <string name="acc_if_semitrailer_damaged">Есть ли повреждения у полуприцепа?</string>
    <string name="acc_photo_semitrailer_damages">Фиксируйте повреждения полуприцепа</string>
    <string name="acc_if_cargo_damaged">Есть ли повреждения груза?</string>
    <string name="acc_photo_semitrailer_number">Фиксируйте гос номер полуприцепа</string>
    <string name="acc_photo_cargo_damages">Фиксируйте повреждение груза</string>
    <string name="acc_if_other_vehicles_damaged">Есть ли повреждения других транспортных средств?</string>
    <string name="acc_photo_other_vehicles_numbers">Фиксируйте гос.номера других транспортных средств</string>
    <string name="acc_photo_other_vehicles_damages">Фиксируйте повреждения других транспортных  средств</string>
    <string name="acc_if_other_property_damaged">Есть ли повреждения имуществу третьих лиц?</string>
    <string name="acc_photo_other_property_damages">Фиксируйте повреждения имущества третьих лиц</string>
    <string name="acc_if_acc_declaration_exists">Есть ли у Вас декларация транспортного происшествия?</string>
    <string name="acc_photo_acc_declaration">Сфотографируйте декларацию транспортного происшествия</string>
    <string name="prefs_syncInterval_title">Интервал проверки сообщений</string>
    <string name="maps_btn">Карты</string>
    <string name="send_log_info">Отправить логи</string>
    <string name="clear_app_data">Очистить все данные</string>
    <string name="enter_code">Введите код регистрации:</string>
    <string name="logout">Перерегистрировать клиент</string>
    <string name="unauth_error_dialog_message">Произошла ошибка авторизации на сервере. Вы хотите попробовать продолжить работу или перерегистрироваться?</string>
    <string name="try_continue">Продолжить без перерегистрации</string>
</resources>