<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_delete_all"
        android:title="@string/menu_inbox_delete_all"
        android:visible="false" />
    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_inbox_autoload_options" />
    <item
        android:id="@+id/menu_show_hidden"
        android:checkable="true"
        android:checked="false"
        android:title="@string/menu_inbox_show_hidden" />
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/menu_inbox_refresh"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_export"
        android:title="@string/menu_inbox_export" />
    <item
        android:id="@+id/log_report"
        android:title="@string/send_log_info" />
    <item
        android:id="@+id/menu_clear_app_data"
        android:title="@string/clear_app_data" />
</menu>
