<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="4dip"
    android:weightSum="4"
    tools:context=".ui.PhotoActivity_">

    <Button
        android:id="@+id/btnPhotoMechanic"
        style="@style/HomeButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:background="@drawable/landscape_button_selector"
        android:text="@string/btn_photo_mechanic" />

    <Button
        android:id="@+id/btnPhotoColumn"
        style="@style/HomeButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:background="@drawable/scan_button_selector"

        android:text="@string/btn_photo_column" />

    <Button
        android:id="@id/btnPhotoConcat"
        style="@style/HomeButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:background="@drawable/check_button_selector"
        android:text="@string/btn_photo_concat" />

    <Button
        android:id="@id/btnPhotoAccident"
        style="@style/HomeButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:background="@drawable/print_button_selector"
        android:text="@string/btn_photo_accident" />

</LinearLayout>
