<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/unauth_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unauth_error_dialog_message"
            android:paddingBottom="15dp"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:drawable/btn_default"
                android:text="@string/logout"
                android:textColor="#000000"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnContinue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:drawable/btn_default"
                android:text="@string/try_continue"
                android:textColor="#000000"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/layout_buttons" />
</RelativeLayout>