<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="0dip"
    tools:context=".ui.DashboardActivity">

    <LinearLayout
        android:id="@id/btnLandscapePhoto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:background="@drawable/landscape_button_selector"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_menu_camera_big" />

        <TextView
            style="@style/HomeButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:typeface="sans"
            android:text="@string/photo_btn" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/btnMaintain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:background="@drawable/check_button_selector"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_menu_mark" />

        <TextView
            style="@style/HomeButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:typeface="sans"
            android:text="@string/to_btn" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/btnMaps"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:background="@drawable/upload_button_selector"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_dialog_map" />

        <TextView
            style="@style/HomeButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:typeface="sans"
            android:text="@string/maps_btn" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/btnMessages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:background="@drawable/scan_button_selector"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_height="48dp"
            android:layout_width="48dp"
            android:src="@drawable/ic_menu_start_conversation" />

        <TextView
            style="@style/HomeButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:typeface="sans"
            android:text="@string/chat_btn" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/btnScan"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:background="@drawable/print_button_selector"
        android:drawableTop="@drawable/camera"
        android:gravity="center"
        android:orientation="vertical"
        android:text="@string/scanner_btn">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_menu_copy_holo_light" />

        <TextView
            style="@style/HomeButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:typeface="sans"
            android:text="@string/scanner_btn" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnInstructions"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:background="@drawable/print_button_selector"
        android:drawableTop="@drawable/camera"
        android:gravity="center"
        android:orientation="vertical"
        android:text="@string/scanner_btn">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_menu_copy_holo_light" />

        <TextView
            style="@style/HomeButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:typeface="sans"
            android:text="Инструкции" />
    </LinearLayout>

</LinearLayout>
